Start AssertJ Migration
Issue gh-3175